--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="reset.css">
+<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
     
 </head>
@@ -16,10 +18,24 @@
     </header>
 <body>
     <div class="flex-body">
-    <div>box 1</div>
-    <div>box 2</div>
+        <div class="box">box 1</div>
+        <div class="box">box 2</div>
     </div>
 
+    <div class="square">
+        <div class="square-box">
+            <img src="image/adidas.jpg" alt="">
+        </div>
+        <div class="square-box">
+            <img src="image/converse.jpg" alt="">  
+        </div>
+        <div class="square-box">
+            <img src="image/nike.jpg" alt="">
+        </div>
+        <div class="square-box">
+            <img src="image/puma.jpg" alt="">
+        </div>
+    </div>
     
 
 </body>
