--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
             <img src="image/puma.jpg" alt="">
         </div>
     </div>
-    
 
+    <div class="square-line">
+        <div class="square-boxline">
+            <img src="image/socksAdidas.jpg" alt="">
+        </div>
+        <div class="square-boxline">
+            <img src="image/socksNike.jpg" alt="">
+        </div>
+        <div class="square-boxline">
+            <img src="image/socksPuma.jpg" alt="">
+        </div>
+    </div>
+    
+    <footer>Powered by: Mapot</footer>
 </body>
 </html>
